compilador-lya-java/test/Gramatica LL(1).txt
<Programa> -> <Bloque> "."

	<Bloque> -> <CONSTS> <VARS> <PROCEDS> <PROPS>

		<CONSTS> -> "const" <C_CONSTS> ";" <Bloque>
		<CONSTS> -> ε

			<C_CONSTS> -> "id" "=" "num" <R_CONSTS>

				<R_CONSTS> -> "," "id" "=" "num" <R_CONSTS>
				<R_CONSTS> -> ε

		<VARS> -> "var" <C_VARS> ";" <Bloque>
		<VARS> -> ε

			<C_VARS> -> "id" <R_VARS>

				<R_VARS> -> "," "id" <R_VARS>
				<R_VARS> -> ε

		<PROCEDS> -> "proced" "id" ";" <Bloque> ";" <Bloque>
		<PROCEDS> -> ε

		<PROPS> -> <INIT>
		<PROPS> -> <IDE>
		<PROPS> -> <WRITE>
		<PROPS> -> <READ>
		<PROPS> -> <CALL>
		<PROPS> -> <IF>
		<PROPS> -> <WHILE>
		<PROPS> -> <FOR>

			<INIT> -> "begin" <D_PROP> "end"

				<D_PROP> -> <PROPS> <R_PROP>

					<R_PROP> -> ";" <PROPS> <R_PROP>
					<R_PROP> -> ε

			<IDE> -> "id" "=" <EXP>

			<WRITE> -> "write" <ARG>

				<ARG> -> "id"
				<ARG> -> "num"

			<READ> -> "read" "id"

			<CALL> -> "call" "id"

			<IF> -> "if" <COND> "then" <PROPS>

			<WHILE> -> "while" <COND> "do" <PROPS>

			<FOR> -> "for" "id" "=" <EXP> <D_FOR> <EXP> "do" <PROPS>

				<D_FOR> -> "to"
				<D_FOR> -> "down"

		<COND> -> <EXP> <OP> <EXP>

		<EXP> -> <TERM> <EXP_A>

			<EXP_A> -> "+" <EXP>
			<EXP_A> -> "-" <EXP>
			<EXP_A> -> ε

			<TERM> -> <FACT> <TERM_A>

				<TERM_A> -> "*" <TERM>
				<TERM_A> -> "/" <TERM>
				<TERM_A> -> ε

				<FACT> -> "(" <EXP> ")"
				<FACT> -> "id"
				<FACT> -> "num"

			<OP> -> "=="
			<OP> -> "!="
			<OP> -> "<"
			<OP> -> ">"
			<OP> -> "<="
			<OP> -> ">="
